--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -35,3 +35,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     compile project(":common")
 }
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
